// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconSecurityClassification should correctly render icon with all props specified 1`] = `
<AccessibleSVG
  className="bdl-IconSecurityClassification test"
  height={100}
  title="title"
  viewBox="0 0 32 32"
  width={200}
>
  <path
    d="M17,2 L5,8 L5,15 C5,21.4214876 10.6933333,29.5421488 17,31 C23.3066667,29.5421488 29,21.4214876 29,15 L29,8 L17,2 Z"
    fill="none"
    stroke="#987654"
    strokeWidth={1}
  />
  <path
    d="M23,11 L23,19"
    fill="none"
    stroke="#987654"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={1}
  />
</AccessibleSVG>
`;

exports[`icons/general/IconSecurityClassification should correctly render icon with default values 1`] = `
<AccessibleSVG
  className="bdl-IconSecurityClassification"
  height={32}
  viewBox="0 0 32 32"
  width={32}
>
  <path
    d="M17,2 L5,8 L5,15 C5,21.4214876 10.6933333,29.5421488 17,31 C23.3066667,29.5421488 29,21.4214876 29,15 L29,8 L17,2 Z"
    fill="none"
    stroke="#222"
    strokeWidth={2}
  />
  <path
    d="M23,11 L23,19"
    fill="none"
    stroke="#222"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
  />
</AccessibleSVG>
`;
